[package]
name = "AASwapClientRESTAPI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "full", "rt-multi-thread"] }
subprocess = "0.2.9"
serde_json = {version = "1.0.107", features = ["std"]}
uuid = {version = "1.4.1", features = ["v4", "v3"]}
num-bigint = {version = "0.4.3", features = ["rand"]}
num-iter = "0.1.43"
num-traits = "0.2.15"
ramp = "0.7.0"
reqwest = {version = "0.12.4", features = ["json"]}
regex = "1.10.5"
futures = "0.3.30"
crossbeam-utils = "0.8.20"
signal-hook = "0.3.17"
nix = { version = "0.29", features = ["process", "signal"] }
pyo3 = { version = "0.22.2"}
#pyo3 = { version = "0.22.2", features = ["auto-initialize"]  }


